# DARKolo

./: .gitignore  README.md  create_kernel.sh  pyproject.toml
binder/: environment.yml  postBuild  requirements.txt
chimeras/BufferStock/: BufferStock-HARK.ipynb  BufferStock-HARK.py  BufferStock-Model.md  BufferStock-dolo.ipynb  BufferStock.ipynb  BufferStock.py  BufferStockParameters.py  BufferStock_HARK.ipynb  BufferStock_HARK.py  BufferStock_dolo.ipynb  BufferStock_dolo.py  bufferstock.yaml
chimeras/BufferStock/.ipynb_checkpoints/: BufferStock-checkpoint.py
chimeras/Friedman-RA/: Friedman-RA.ipynb  Friedman-RA_k-as-state.yaml  Friedman-RA_m-as-state.yaml
chimeras/Friedman-RA/.ipynb_checkpoints/: Friedman-RA-checkpoint.ipynb  Friedman-RA-checkpoint.py
chimeras/KinkedRConsumer/: kinkedrconsumer.yaml  kinkedrconsumer_dolo.ipynb
chimeras/KrusellSmith/: KrusellSmith.ipynb  KrusellSmith.py  KrusellSmith.yaml  KrusellSmith_dolark.ipynb  KrusellSmith_new.ipynb
chimeras/Simple/: simple.yaml  simple_dolo.ipynb
chimeras/qModel/: Q_model.yaml  README.md  qModel-Template-Handout-Figures.ipynb  qModel-Template-Handout-Figures.py  qModel_in_HARK_and_Dolo.ipynb  qModel_in_HARK_and_Dolo.py  q_Model_in_HARK_and_Dolo.ipynb  q_Model_in_HARK_and_Dolo.py
chimeras/qModel/Qmod/: Q_investment.py
development/: Representing_Multidimensional_Discrete-Continuous.ipynb
